/*
 * Copyright (C) 2022 PixieBrix, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

import { echoBlock } from "@/runtime/pipelineTests/pipelineTestHelpers";
import { MarketplaceListing } from "@/types/contract";
import { render } from "@testing-library/react";
import React from "react";
import ConfigurationTitle from "./ConfigurationTitle";

test("renders block name", () => {
  const rendered = render(
    <ConfigurationTitle block={echoBlock} listing={null} />
  );
  expect(rendered.asFragment()).toMatchSnapshot();
});

test("renders document link when How To is not empty", () => {
  const listing = {
    instructions: "Test how to",
  } as MarketplaceListing;
  const rendered = render(
    <ConfigurationTitle block={echoBlock} listing={listing} />
  );
  expect(rendered.asFragment()).toMatchSnapshot();
});

test("renders document link when Additional resources is not empty", () => {
  const listing = {
    assets: [
      {
        url: "https://example.com/test.pdf",
      },
    ],
  } as MarketplaceListing;
  const rendered = render(
    <ConfigurationTitle block={echoBlock} listing={listing} />
  );
  expect(rendered.asFragment()).toMatchSnapshot();
});
