// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders block name 1`] = `
<DocumentFragment>
  <span
    class="title"
  >
    Input: 
    <span
      class="blockName"
    >
      Echo Block
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders document link when Additional resources is not empty 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between"
  >
    <span
      class="title"
    >
      Input: 
      <span
        class="blockName"
      >
        Echo Block
      </span>
    </span>
    <a
      class="documentationLink"
      href="https://www.pixiebrix.com/marketplace/test_listing_id/"
      rel="noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-external-link-alt fa-w-16 "
        data-icon="external-link-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          fill="currentColor"
        />
      </svg>
       View Documentation
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders document link when How To is not empty 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between"
  >
    <span
      class="title"
    >
      Input: 
      <span
        class="blockName"
      >
        Echo Block
      </span>
    </span>
    <a
      class="documentationLink"
      href="https://www.pixiebrix.com/marketplace/test_listing_id/"
      rel="noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-external-link-alt fa-w-16 "
        data-icon="external-link-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          fill="currentColor"
        />
      </svg>
       View Documentation
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders plain 'Input' title 1`] = `
<DocumentFragment>
  <span>
    Input
  </span>
</DocumentFragment>
`;
